# hexagon-dsp-keccak

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/appfloweb/keccak/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  sha3.c  util.c  util.h
app/src/main/cpp/inc/: calculator.idl
app/src/main/java/org/appfloweb/keccak/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/appfloweb/keccak/: ExampleUnitTest.kt
dsp/: calculator_imp.c  hexagon.min  hexagon_deps.min  keccak256_96.S  keccak512_40.S  keccak512_40_96.S  keccak512_64.S
gradle/wrapper/: gradle-wrapper.properties
